# Conditional-Flow-Matching

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_sanity_2d.ipynb  02_fm_ot_colab.ipynb  02_fm_ot_colab_runned.ipynb  02_train_cifar.ipynb  03_eval_ablations.ipynb
report/: .gitignore  rapport.md  rapport.tex  refs.bib
results/: results.json
src/flow_matching_b3/: __init__.py  ema.py  fid.py  losses.py  metrics.py  paths.py  sampling.py  train.py  unet.py
tests/: test_metrics.py  test_paths.py  test_sampling.py  test_train.py
