[project]
name = "flow-matching-b3"
version = "0.1.0"
description = "Reduced reproduction of Flow Matching for Generative Modeling (Lipman et al., ICLR 2023) on CIFAR-10."
authors = [
    { name = "Alexis", email = "aarnaud@albertschool.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchdiffeq>=0.2.4",
    "einops>=0.7",
    "numpy>=1.26",
    "tqdm>=4.66",
    "clean-fid>=0.1.35",
    "wandb>=0.17",
    "pillow>=10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "ipykernel>=6",
    "nbstripout>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
